[tool.poetry]
name = "mikoshi-mainframe"
version = "0.1.0"
description = ""
authors = ["Nuno Carriço <nuno.mcarrico@decsis.pt>"]
readme = "README.md"
packages = [{include = "mikoshi_mainframe"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.350"
pypdf = "^3.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
